--- a/frontend/financer/src/app/home/home.component.html
+++ b/frontend/financer/src/app/home/home.component.html
@@ -1,7 +1,57 @@
 
-<div>
-  <div class="settingsOverview"></div>
-  <div class="mainExpensesGraph"></div>
-  <div class="estimatedMoneyGraph"></div>
-  <div class="calendar"></div>
+<div class="homeLayout">
+  <div class="settingsOverview">
+    <mat-card>
+      <mat-card-header>
+        Your Settings
+      </mat-card-header>
+      <mat-card-content>
+        <div>
+          Monthly income:1111
+        </div>
+        <div>
+          Your average housing expenses:2220
+        </div>
+        <div>
+          Your average food expenses:222
+        </div>
+        <div>
+          Your average travel expenses:222
+        </div>
+        <div>
+          Your at the end of month: 100
+        </div>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-flat-button>Edit</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+  <div class="mainExpensesGraph">
+    <mat-card>
+      <mat-card-header>Types of expenses</mat-card-header>
+      <mat-card-content>
+        <canvas #typesOfExpensesChart id="lineCanvas"></canvas>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <div class="estimatedMonthMoneyGraph">
+    <mat-card>
+      <mat-card-header>Planned amount of money by month</mat-card-header>
+      <mat-card-content>
+        <!--        Graph-->
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <div class="estimatedDayMoneyGraph">
+    <mat-card>
+      <mat-card-header>Planned amount of money by Day</mat-card-header>
+      <mat-card-content>
+        <!--        Graph-->
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <div class="calendar">
+    <mat-card>aaa</mat-card>
+  </div>
 </div>
