added charts with pseudo data but the label isn't showing up

--- a/frontend/financer/src/app/home/home.component.html
+++ b/frontend/financer/src/app/home/home.component.html
@@ -31,7 +31,7 @@
     <mat-card>
       <mat-card-header>Types of expenses</mat-card-header>
       <mat-card-content>
-        <canvas #typesOfExpensesChart id="lineCanvas"></canvas>
+        <canvas #typesOfExpensesChart ></canvas>
       </mat-card-content>
     </mat-card>
   </div>
@@ -39,7 +39,7 @@
     <mat-card>
       <mat-card-header>Planned amount of money by month</mat-card-header>
       <mat-card-content>
-        <!--        Graph-->
+        <canvas #pannedMoneyYearChart ></canvas>
       </mat-card-content>
     </mat-card>
   </div>
@@ -47,7 +47,7 @@
     <mat-card>
       <mat-card-header>Planned amount of money by Day</mat-card-header>
       <mat-card-content>
-        <!--        Graph-->
+        <canvas #pannedMoneyMonthChart ></canvas>
       </mat-card-content>
     </mat-card>
   </div>
